syntax = "proto3";

option go_package = "userservice/proto/kafkaschema";

package kafkaschema;

message UserAddedMessage{
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string email = 5;
  string country = 6;
}
